# yggdrasil-ai

./: .gitignore  .pre-commit-config.yaml  README.md  Yggdrasil Onboarding Guide.html  ai-plugin file.txt  app.py  cli.py  detect_circular_imports.py  diagnose_path_issue.py  goals.md  openapi.yaml  package-lock.json  package.json  privacy.html  reflected_codes.json  render.yaml  requirements.txt  run_minerva.py  sanitize_emojis.py.txt  sanitize_metadata.py  scan_routes.py  server.js  setup.cfg  setup.py  setup.sh  streamlit url & flask info.txt  validate_env.py.txt  verify_and_create_yggdrasil_layout.py.txt  verify_yggdrasil_layout.py.txt  visualize_yggdrasil.py
.well-known/: ai-plugin.json
yggdrasil_ai/: init_pinecone_index.py  memory_manager.py  memory_utils.py  minerva_loop.py  rag.py  requirements.txt  test_add_memory.py.py
yggdrasil_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yggdrasil_ai/yggdrasil_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  yggdrasil__init__.py.py
