[metadata]
name = yggdrasil_ai
version = 0.1.0
description = Memory-powered AI system inspired by Yggdrasil architecture.
author = Nick Crayne
author_email = nickacrayne@gmail.com
url = https://github.com/CinemaCrayne/yggdrasil-ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = AI, memory, pinecone, openai, rag, yggdrasil

[options]
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    openai
    pinecone
    python-dotenv
    ratelimit

[options.extras_require]
dev =
    pytest
    black
    isort

[options.package_data]
* = *.md, *.txt, *.json

[flake8]
max-line-length = 88
